--- a/src/main/resources/templates/admin/calendar.html
+++ b/src/main/resources/templates/admin/calendar.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/admin_layout}">
 <head>
-    <title>Menu</title>
+    <title>일정관리</title>
 </head>
 <body th:with="currentPage = 'ADMIN'">
 <main layout:fragment="content" role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
@@ -22,19 +22,13 @@
         </div>
     </div>
 
-    <div class="container-fluid">
-        <div id='calendar'></div>
-    </div>
+    <div id="calendar"></div>
 </main>
 
 <th:block layout:fragment="script">
     <script th:inline="javascript" type="text/javascript">
-        document.addEventListener('DOMContentLoaded', function() {
-            var calendarEl = document.getElementById('calendar');
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                initialView: 'dayGridMonth'
-            });
-            calendar.render();
+        var cal = new tui.Calendar('#calendar', {
+            defaultView: 'month' // monthly view option
         });
     </script>
 </th:block>
