--- a/src/main/resources/templates/admin/commonCode.html
+++ b/src/main/resources/templates/admin/commonCode.html
@@ -10,50 +10,52 @@
 <main layout:fragment="content" role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" id="commonCode">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">공통코드관리</h1>
-        <div class="mb-2 mb-md-0">
+    </div>
+
+    <form @keyup.enter="search">
+        <table class="table table-active">
+            <tbody>
+            <tr>
+                <th>Code Type</th>
+                <td><input type="text" v-model="params.codeType" class="form-control form-control-sm"></td>
+                <th>Code</th>
+                <td><input type="text" v-model="params.code" class="form-control form-control-sm"></td>
+                <th>Code Name</th>
+                <td><input type="text" v-model="params.codeName" class="form-control form-control-sm"></td>
+                <th>Use Flag</th>
+                <td>
+                    <select class="form-control form-control-sm" v-model="params.useFlag">
+                        <option value="">All</option>
+                        <option value="Y">Yes</option>
+                        <option value="N">No</option>
+                    </select>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <div class="mb-3 text-center">
+            <button type="button" class="btn btn-sm btn-primary search" @click="search">
+                <i class="fa fa-search"></i> 검색</button>
+        </div>
+    </form>
+
+    <div class="d-flex justify-content-between align-items-end mb-2">
+        <p class="mb-0">Total: {{pageOptions.totalItems}}</p>
+        <div>
             <button type="button" class="btn btn-sm btn-outline-secondary" @click="appendRow">추가</button>
             <button type="button" class="btn btn-sm btn-outline-dark" @click="deleteRow">삭제</button>
             <button type="button" class="btn btn-sm btn-outline-primary" @click="save">저장</button>
         </div>
     </div>
 
-    <div>
-        <form @keyup.enter="search">
-            <table class="table table-active">
-                <tbody>
-                <tr>
-                    <th>Code Type</th>
-                    <td><input type="text" v-model="params.codeType" class="form-control form-control-sm"></td>
-                    <th>Code</th>
-                    <td><input type="text" v-model="params.code" class="form-control form-control-sm"></td>
-                    <th>Code Name</th>
-                    <td><input type="text" v-model="params.codeName" class="form-control form-control-sm"></td>
-                    <th>Use Flag</th>
-                    <td>
-                        <select class="form-control form-control-sm" v-model="params.useFlag">
-                            <option value="Y">Yes</option>
-                            <option value="N">No</option>
-                        </select>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <div class="mb-3 text-center">
-                <button type="button" class="btn btn-sm btn-primary search" @click="search">
-                    <i class="fa fa-search"></i> 검색</button>
-            </div>
-        </form>
-    </div>
-
-    <div class="container-fluid">
-        <div id="grid"></div>
-    </div>
+    <div id="grid"></div>
 </main>
 
 <th:block layout:fragment="script">
     <script th:inline="javascript" type="text/javascript">
         /*<![CDATA[*/
         var commonCode = {
+            el: "#commonCode",
             data: function () {
                 return {
                     params: {
@@ -62,7 +64,8 @@
                         codeName: null,
                         useFlag: 'Y'
                     },
-                    grid: null
+                    grid: null,
+                    pageOptions: 0
                 }
             },
             methods: {
@@ -135,7 +138,7 @@
                         }
                     },
                     rowHeaders: ['checkbox'],
-                    scrollX: false,
+                    scrollX: true,
                     scrollY: false,
                     pageOptions: {
                         perPage: 10
@@ -155,6 +158,7 @@
                             name: 'codeType',
                             align: 'center',
                             editor: "text",
+                            width: 120,
                             validation: {
                                 required: true
                             }
@@ -164,6 +168,7 @@
                             name: 'code',
                             align: 'center',
                             editor: "text",
+                            width: 120,
                             validation: {
                                 required: true
                             }
@@ -173,6 +178,7 @@
                             name: 'codeName',
                             align: 'center',
                             editor: "text",
+                            width: 120,
                             validation: {
                                 required: true
                             }
@@ -180,19 +186,21 @@
                         {
                             header: 'Code Desc',
                             name: 'codeDesc',
-                            align: 'center',
                             editor: "text",
+                            width: 200,
                         },
                         {
                             header: 'Parent Code',
                             name: 'parentCode',
                             align: 'center',
                             editor: "text",
+                            width: 120,
                         },
                         {
                             header: 'Use Flag',
                             name: 'useFlag',
                             align: 'center',
+                            width: 80,
                             formatter: 'listItemText',
                             editor: {
                                 type: 'select',
@@ -205,43 +213,75 @@
                             }
                         },
                         {
-                            header: 'Sort Order No',
+                            header: 'Sort No',
                             name: 'sortNo',
                             align: 'center',
                             editor: "text",
+                            width: 70,
                         },
                         {
                             header: 'Attribute1',
                             name: 'attribute1',
                             align: 'center',
                             editor: "text",
+                            width: 100,
                         },
                         {
                             header: 'Attribute2',
                             name: 'attribute2',
                             align: 'center',
                             editor: "text",
+                            width: 100,
                         },
                         {
                             header: 'Attribute3',
                             name: 'attribute3',
                             align: 'center',
                             editor: "text",
+                            width: 100,
                         },
                         {
                             header: 'Attribute4',
                             name: 'attribute4',
                             align: 'center',
                             editor: "text",
+                            width: 100,
                         },
                         {
                             header: 'Attribute5',
                             name: 'attribute5',
                             align: 'center',
                             editor: "text",
+                            width: 100,
                         },
-
-                    ]
+                        {
+                            header: "Created By",
+                            name: "createdBy",
+                            align: 'center',
+                            width: 70,
+                        },
+                        {
+                            header: 'creationDate',
+                            name: 'creationDate',
+                            align: 'center',
+                            width: 150
+                        },
+                        {
+                            header: "Modified By",
+                            name: "lastModifiedBy",
+                            align: 'center',
+                            width: 70,
+                        },
+                        {
+                            header: 'lastUpdateDate',
+                            name: 'lastUpdateDate',
+                            align: 'center',
+                            width: 150,
+                        },
+                    ],
+                    columnOptions: {
+                        resizable: true
+                    }
                 });
 
                 // Grid Event
@@ -280,10 +320,23 @@
                     // console.log(ev)
                     // bootbox.alert("에러가 발생했습니다.");
                 });*/
+                this.grid.on('successResponse', function(ev) {
+                    // 결과가 true인 경우
+                    // console.log(ev)
+                    // bootbox.alert("저장 되었습니다.");
+                    var page = ev.instance.paginationManager.getPagination()
+                    that.pageOptions = page._options;
+                });
+
+                this.grid.on('errorResponse', function(ev) {
+                    // 오류가 발생한 경우
+                    // console.log(ev)
+                    bootbox.alert("에러가 발생했습니다.");
+                });
             }
         }
 
-        Vue.createApp(commonCode).mount('#commonCode');
+        new Vue(commonCode);
         /*]]>*/
     </script>
 </th:block>
