--- a/src/main/resources/templates/admin/bulletin.html
+++ b/src/main/resources/templates/admin/bulletin.html
@@ -38,7 +38,7 @@
     </form>
 
     <div class="d-flex justify-content-between align-items-end mb-2">
-        <p class="mb-0">Total: {{pageOptions.totalItems}}</p>
+        <p class="mb-0">Total: {{totalCount}}</p>
         <div>
             <button type="button" class="btn btn-sm btn-outline-secondary" @click="appendRow">추가</button>
             <button type="button" class="btn btn-sm btn-outline-dark" @click="deleteRow">삭제</button>
@@ -52,42 +52,43 @@
 <th:block layout:fragment="script">
     <script th:inline="javascript" type="text/javascript">
         /*<![CDATA[*/
-        var bulletin = {
+        var grid;
+        var bulletin = new Vue({
             el: "#bulletin",
-            data: function () {
-                return {
-                    params: {
-                        title: null,
-                        type: null,
-                        useFlag: 'Y'
-                    },
-                    grid: null,
-                    pageOptions: 0,
-                    bulletinType: [],
-                }
+            data: {
+                params: {
+                    title: null,
+                    type: null,
+                    useFlag: 'Y'
+                },
+                dataHeader: {},
+                totalCount: 0,
+                lookups: {
+                    bulletinType: []
+                },
             },
             methods: {
                 search: function () {
                     console.log(this.params)
-                    this.grid.finishEditing();
-                    this.grid.readData(1, this.params);
+                    grid.finishEditing();
+                    grid.readData(1, this.params);
                 },
                 appendRow: function () {
-                    this.grid.finishEditing();
-                    this.grid.appendRow();
+                    grid.finishEditing();
+                    grid.appendRow();
                 },
                 deleteRow: function () {
                     var that = this;
-                    var rows = this.grid.getCheckedRowKeys();
+                    var rows = grid.getCheckedRowKeys();
 
                     if (rows.length <= 0) {
                         bootbox.alert("대상을 선택하세요");
                     } else {
                         bootbox.confirm("삭제하시겠습니까?", function (result) {
                             if (result) {
-                                var isRemove = that.grid.removeCheckedRows(false);
+                                var isRemove = grid.removeCheckedRows(false);
                                 if (isRemove) {
-                                    that.grid.request("modifyData", {showConfirm: false});
+                                    grid.request("modifyData", {showConfirm: false});
                                 }
                             }
                         });
@@ -96,10 +97,10 @@
                 save: function () {
                     var that = this;
                     // 저장 전 Editing을 끝낸다.
-                    this.grid.finishEditing();
+                    grid.finishEditing();
 
-                    if (this.grid.isModified()) {
-                        var isValid = this.grid.validate();
+                    if (grid.isModified()) {
+                        var isValid = grid.validate();
                         console.log(isValid);
 
                         if (isValid.length) {
@@ -108,7 +109,7 @@
                         } else {
                             bootbox.confirm("저장 하시겠습니까?", function (result) {
                                 if (result) {
-                                    that.grid.request("modifyData", {showConfirm: false});
+                                    grid.request("modifyData", {showConfirm: false});
                                 }
                             });
                         }
@@ -119,25 +120,24 @@
             },
             created: function () {
                 var that = this;
-                this.bulletinType = [];
+                this.dataHeader[header] = token;
+                this.lookups.bulletinType = [];
                 _.forEach([[${bulletinType}]], function (a,b) {
                     console.log(a, b)
-                    that.bulletinType.push({text: a.codeName, value: a.code});
+                    that.lookups.bulletinType.push({text: a.codeName, value: a.code});
                 });
             },
             mounted: function () {
                 var that = this;
-                var dataHeader = {};
-                dataHeader[header] = token;
 
-                this.grid = new tui.Grid({
+                grid = new tui.Grid({
                     el: document.getElementById('grid'),
                     data: {
                         withCredentials: true,
                         contentType: 'application/json',
-                        headers: dataHeader,
+                        headers: this.dataHeader,
                         api: {
-                            readData: {url: '/admin/bulletin/api', method: 'GET', initParams: that.params},
+                            readData: {url: '/admin/bulletin/api', method: 'GET', initParams: this.params},
                             modifyData: {url: '/admin/bulletin/api', method: 'POST'},
                         }
                     },
@@ -174,7 +174,7 @@
                             editor: {
                                 type: 'select',
                                 options: {
-                                    listItems: that.bulletinType
+                                    listItems: this.lookups.bulletinType
                                 }
                             },
                             validation: {
@@ -225,7 +225,7 @@
                 });
 
                 // Grid Event
-                /*this.grid.on('beforeRequest', function(ev) {
+                /*grid.on('beforeRequest', function(ev) {
                     // 요청을 보내기 전
                 }).on('successResponse', function(ev) {
                     // 결과가 true인 경우
@@ -235,32 +235,32 @@
                     // 오류가 발생한 경우
                 });*/
 
-                /*this.grid.on('beforeRequest', function(ev) {
+                /*grid.on('beforeRequest', function(ev) {
                     // 요청을 보내기 전
                     // bootbox.alert("beforeRequest");
                 });
 
-                this.grid.on("response", function (ev) {
+                grid.on("response", function (ev) {
                     // 성공/실패와 관계 없이 응답을 받았을 경우
                 });
 
-                this.grid.on('successResponse', function(ev) {
+                grid.on('successResponse', function(ev) {
                     // 결과가 true인 경우
                     // console.log(ev)
                     // bootbox.alert("저장 되었습니다.");
                 });
 
-                this.grid.on('failResponse', function(ev) {
+                grid.on('failResponse', function(ev) {
                     // 결과가 false인 경우
                     // bootbox.alert("저장에 실패 했습니다.");
                 });
 
-                this.grid.on('errorResponse', function(ev) {
+                grid.on('errorResponse', function(ev) {
                     // 오류가 발생한 경우
                     // console.log(ev)
                     // bootbox.alert("에러가 발생했습니다.");
                 });*/
-                this.grid.on('successResponse', function(ev) {
+                /*grid.on('successResponse', function(ev) {
                     // 결과가 true인 경우
                     console.log(ev)
 
@@ -269,15 +269,13 @@
                     // bootbox.alert("저장 되었습니다.");
                 });
 
-                this.grid.on('errorResponse', function(ev) {
+                grid.on('errorResponse', function(ev) {
                     // 오류가 발생한 경우
                     console.log(ev)
                     bootbox.alert("에러가 발생했습니다.");
-                });
+                });*/
             }
-        }
-
-        new Vue(bulletin);
+        });
         /*]]>*/
     </script>
 </th:block>
